# cas-dl-compvis-exercises-hs2025

./: .gitignore  Dockerfile  README.md  pyproject.toml
notebooks/00_env_check/: env_check.ipynb
notebooks/01_pytorch_and_images/: pytorch_and_images.ipynb
notebooks/02_mlp_and_images/: mlp_and_images.ipynb
notebooks/03_cnns/: cnns.ipynb
notebooks/04_classification_practical/: classification_practical.ipynb
notebooks/05_foundation_models/: foundation_models.ipynb
src/dl_cv_lectures/: classification.py  classifier.py  transform.py  utils.py  visualize.py
src/dl_cv_lectures/data/: cats_vs_dogs.py  image_folder.py  pattern.py
